@@ -2,8 +2,8 @@ m4_define([intltool_minimum_version], [0.31])
 m4_define([xfpm_version_major],  [0])
 m4_define([xfpm_version_minor],  [8])
 m4_define([xfpm_version_micro],  [0])
-m4_define([xfpm_version_build],  [r@REVISION@])
-m4_define([xfpm_version_tag],[svn])
+m4_define([xfpm_version_build],  [])
+m4_define([xfpm_version_tag],[beta1])
 m4_define([xfpm_version], [xfpm_version_major().xfpm_version_minor().xfpm_version_micro()ifelse(xfpm_version_tag(), [svn], [xfpm_version_tag().xfpm_version_build()], [xfpm_version_tag()])])
 
 AC_INIT([xfce4-power-manager], [xfpm_version], [http://bugzilla.xfce.org/])
