@@ -3,25 +3,6 @@ Version=1.0
 Encoding=UTF-8
 _Name=Xfce 4 Power Manager
 _GenericName=Power Manager
-X-XfceSettingsName=Power
-X-XfceSettingsName[ca]=Energia
-X-XfceSettingsName[cs]=Napájení
-X-XfceSettingsName[da]=Strøm
-X-XfceSettingsName[de]=Energie
-X-XfceSettingsName[el]=Ρεύμα
-X-XfceSettingsName[es]=Energía
-X-XfceSettingsName[et]=Vool
-X-XfceSettingsName[eu]=Energia
-X-XfceSettingsName[fi]=Virranhallinta
-X-XfceSettingsName[id]=Daya
-X-XfceSettingsName[ja]=電源
-X-XfceSettingsName[nb]=Strøm
-X-XfceSettingsName[pt]=Energia
-X-XfceSettingsName[pt_BR]=Energia
-X-XfceSettingsName[sv]=Ström
-X-XfceSettingsName[tr]=Güç
-X-XfceSettingsName[uk]=Живлення
-X-XfceSettingsName[zh_CN]=电源
 _Comment=Settings for the Xfce 4 Power Manager
 Exec=xfce4-power-manager-settings
 Icon=gpm-ac-adapter
