@@ -17,7 +17,7 @@
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
-          <widget class="GtkVBox" id="vbox">
+          <widget class="GtkVBox" id="allbox">
             <property name="visible">True</property>
             <child>
               <widget class="GtkHBox" id="hbox">
