@@ -51,11 +51,13 @@ XfpmSession       		*xfpm_session_new             (void);
 
 void			         xfpm_session_set_client_id   (XfpmSession *session,
 							       const gchar *client_id);
-							       
+							    
 /* This is used to change the restart Style */
 void				 xfpm_session_quit	      (XfpmSession *session);
 
-void				 xfpm_session_ask_shutdown    (XfpmSession *session);
+gboolean                         xfpm_session_shutdown        (XfpmSession *session);
+
+gboolean			 xfpm_session_ask_shutdown    (XfpmSession *session);
 
 G_END_DECLS
 
