@@ -1,4 +1,7 @@
 
+2009-04-10 23:31 Ali aliov@xfce.org 
+	 * : Making the settings dialog pluggable+use the shutdown interface on the xfce4-session to shutdown
+
 2009-04-10 21:29 Ali aliov@xfce.org 
 	 * : Added handler for power button+added option to ask the session manager to its show the exit dialog
 
